--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Dr. Code</title>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/basic.css"> 
+	<link rel="stylesheet" href="css/atome.css"> 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script src="js/typed.js"></script>
 </head>
@@ -35,144 +35,128 @@
 
 <body>
 
-
 <header>
 <div class="bg-black white py2" >
 	<div class="container sm-w8">
-		<div class="right-align h6">
-			<span class="btn btn-outline">Ask doctor</span>
+		<div class="align-right h6 gray">
+			<span class="btn btn-outline">Call Dr.</span> <span class="btn">+33 04 0055</span>
 		</div>
-		<div class="h1 py2" style="height:3em;">
+		<div class="h1 py2" style="height:2.5em;">
 			<span class="red">When</span> you need <br> 
 			<span id="typed">
 				<span class="green">to cure</span> <span class="blue">your code.</span>
 			</span>
 		</div>
-		<div class="py2 right-align sanserif">
+		<div class="py2 align-right serif-sans">
 			<h1 class="regular mb0"><strong style="font-size:130%;">::</strong> Dr. Code</h1>
-			<h2 class="h5 regular m0">Code Consulting</h2>
+			<h2 class="h5 regular m0">Fast-consulting code</h2>
 		</div>
 	</div>
 </div>
 </header>
 
 
-
 <section>
-<div class="bg-silver">
-	<div class="container lg-w8 py3">
-		<div class="medium sanserif mb2 p1">
-			<strong style="font-size:130%;">::</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, aspernatur fugiat quaerat, iure ex voluptatibus aperiam quos, dicta nihil, cupiditate unde. Animi facere quod unde ipsum deleniti consectetur modi distinctio!
-		</div>
-		
-		<div class="row">
-			<div class="cell h5 p1">
-				<p>
-					<b><span class="green">My service</span> <span class="blue">number 1</span></b> <br>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur officia rerum distinctio, deleniti iure quam esse hic. Corporis perferendis hic soluta ad. Explicabo nobis accusantium delectus recusandae sequi ea quaerat.
-				</p>
-			</div>
-			<div class="cell h5 p1">
-				<p>
-					<b><span class="green">My service</span> <span class="blue">number 2</span></b> <br>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus accusamus debitis obcaecati, placeat praesentium laborum impedit perferendis sunt autem. Tempore voluptatibus temporibus fugit porro blanditiis. Ipsam iure ipsa fugiat quis.
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="cell h5 p1">
-				<p>
-					<b><span class="green">My service</span> <span class="blue">number 1</span></b> <br>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus accusamus debitis obcaecati, placeat praesentium laborum impedit perferendis sunt autem. Tempore voluptatibus temporibus fugit porro blanditiis. Ipsam iure ipsa fugiat quis.
-				</p>
-			</div>	
-			<div class="cell h5 p1">
-				<p>
-				 <b><span class="green">Any</span> <span class="blue">question ?</span></b> <br>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-				</p>
-			</div>
-		</div>
-	</div>
+<div class="bg-silver  black py3">
+	<div class="container lg-w8">
+
+		<div class="h3 py2">
+		 <strong><span class="red">Verbaliser un problème </span> c'est déjà en partie <span class="green">le résoudre.</span> </strong><br>
+		 <b>Dr. Code </b>propose des <span class="blue">consultations courtes</span> pour tous ceux qui manipulent du code informatique confrontés à des difficultés.
+	 	</div>
+
+	 	<div class="muted h5"> 
+	 		<p>Administrateurs, architectes, concepteurs, analystes métiers, managers, chefs de projets, scrumasters, coachs... </p>
+	 	</div>
+
+	 	<div class="clearfix mxn2 border-top border-bottom">
+	 		<div class="col px2 sm-w6">
+	 			<h4>Drcode <span class="blue">c'est</span></h4>
+	 			<ul class="list-reset h5">
+	 				<li class="inline"><span class="blue">&bull;</span> Un diagnostic permettant d'enclencher un processus d'amélioration</li>
+	 				<li class="inline"><span class="blue">&bull;</span> Une approche holistique de la résolution de problèmes liant produit et organisation</li>
+	 				<li class="inline"><span class="blue">&bull;</span> Un regard critique et bienveillant appuyé sur 20 ans d'expérience</li>
+	 				<li class="inline"><span class="blue">&bull;</span> Une maïeutique</li>
+	 			</ul>
+	 		</div>
+	 		<div class="col px2 sm-w4 h5">
+	 			<h4 class="">Drcode <span class="red">n'est pas</span></h4>
+	 			<ul class="list-reset h5">
+	 				<li class="inline"><span class="red">x</span> Un service de consultant payé à la journée</li>
+	 				<li class="inline"><span class="red">x</span> Une boîte à outils de solutions toutes faites</li>
+	 				<li class="inline"><span class="red">x</span> Une expertise spécialisée sur telle ou telle technologie.</li>
+	 			</ul>
+	 		</div>
+	 	</div>
+
+	 	<h4>Fonctionnement</h4>
+
 </div>	
 </section>
 
-<section>
-<div class="py2 bg-white bg-left bg-cover" >
-	<div class="row ">
-		<div class="cell w6 sm-w4 p2">
-			<span class="align-bottom"><img src="img/cook_hero.png" alt="" class="circle"></span>
+<section id="sticky_anchor">
+<div id="sticky" class="w10 bg-white py2 green border-top border-bottom border-green">
+	<div class="container align-center">
+		<div class="h5">
+		<span class="btn btn-outline">Call the doctor</span>
+		<span class="h6"><span class="btn">+33 04 0055</span> <span class="btn">hello@drcode.io</span></span>
 		</div>
-		<div class="cell  sm-w6 p2">
+	</div> 
+</div>
+</section>
+
+<section>
+<div class="bg-white">
+	<div class="row m0">
+		<div class="cell w6 sm-w4 mr1 align-bottom">
+			<span><img src="img/arnaud_hero.png" alt="" class="align-bottom"></span>
+		</div>
+		<div class="cell sm-w6 p2 align-middle">
 			<h5 class="m0"><span class="green">Doctor</span> <span class="blue">Who ?</span></h5>
 			<h1 class="m0">A. Bailly</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quas soluta, quis amet quia accusantium cum deserunt, inventore pariatur cumque, officia consequatur quo nemo tempora doloremque! Excepturi magnam, tempore voluptatum!</p>
-			<p class="h5"><span class="btn btn-outline">linkdin</span> <span class="btn btn-outline">Dr. Code blog</span></p>
-			<p class="h5"><span class="btn">+33 04 0055</span> <span class="btn">hello@drcode.io</span></p>
+			<p class="h5"><span class="btn btn-outline">linkdin</span> <span class="btn btn-outline">tech blog</span></p>
 		</div>
 	</div>
 </div>
 </section>
 
+
+
 <section>
-	<div class="bg-black gray py2">
-		<div class="container sm-w9 md-w8 lg-w7">
-			<p class="mt3">09.08  Exemple d'article</p>
-			<h1 class="mt0 sm-w7">Utiliser les classes de l'environnement Java.</h1>
-			<p>Following closely along both option we saw before, SlabText makes it possible to easily create big, bold and 100% fluid headlines for responsive websites.
-			SlabText might look similar to BigText, but there’s one important difference: BigText uses a constant number of lines while SlabText uses a variable number of lines. Taking a longer title marked h1, SlabText will split it in rows.</p>
-			<h2>sub header</h2>
-			<p>Ut corporis, harum accusantium ipsa natus eius sapiente magni voluptatem consequuntur. Porro illo tempore ducimus commodi maxime rerum ipsam architecto consequatur eum. Explicabo quod beatae dicta facere, cupiditate voluptate sequi.</p>
-		</div>
-	</div>
-
-	<div class="bg-navy blue py2">
-	<div class="container h6">
-	<pre><code>
-import java.awt.*;
-
-public class MaPremiereApplet extends java.applet.Applet {
-    Font helvetica18Normal = new Font("Helvetica",Font.PLAIN,18);
-
-    public void writeCenter(Graphics g, String s, int y){
-    FontMetrics metriqueCourante= getFontMetrics(g.getFont());
-         g.drawString(s,(getSize().width-metriqueCourante.stringWidth(s))/2, y);
-    }
-	
-    public void paint(Graphics g) {
-
-    g.setColor(Color.blue);
-    g.setFont(helvetica18Normal);
-		writeCenter(g, "Le même avec emphase au centre!", 30);
-		writeCenter(g, "Liberté",  60);
-		writeCenter(g, "Egalité",  90);
-		writeCenter(g, "Fraternité",  120);
-		}
-}
-	</code></pre>
-	</div>
-	</div>	
-
-	<div class="bg-black gray py2">
-		<div class="container sm-w9 md-w8 lg-w7">
-			<h2>sub header</h2>
-			<p>Following closely along both option we saw before, SlabText makes it possible to easily create big, bold and 100% fluid headlines for responsive websites.
-			SlabText might look similar to BigText, but there’s one important difference: BigText uses a constant number of lines while SlabText uses a variable number of lines. Taking a longer title marked h1, SlabText will split it in rows.</p>
-			<p>Ut corporis, harum accusantium ipsa natus eius sapiente magni voluptatem consequuntur. Porro illo tempore ducimus commodi maxime rerum ipsam architecto consequatur eum. Explicabo quod beatae dicta facere, cupiditate voluptate sequi.</p>
-		</div>
-	</div>
+<div class="bg-darken-1 py1">
+	<div class="container">
+	 	<div class="row">
+	 		<div class="cell p1 sm-w3">
+	 			<h2 class="px2 align-right">Faq</h2>
+	 		</div>
+	 		<div class="cell p1 sm-w7 h5">
+	 			<ul class="list-reset">
+	 				<li class="border-top ">
+	 					<h4 class="mb0">Combien ça coûte?</h4>
+	 					<p>€100/h.</p>
+	 				</li>
+	 				<li class="border-top ">
+	 					<h4 class="mb0">Est-ce remboursé par la sécurité sociale ?</h4>
+	 					<p>Pas encore.</p>
+	 				</li>
+	 				<li class="border-top ">
+	 					<h4 class="mb0">Une question ?</h4>
+	 					<p><a href="#">hello@drcode.io</a> </p> 
+	 				</li>
+	 			</ul>		
+	 		</div>
+	 	</div>
+</div>	
 </section>
 
+
 <footer>
-	<div class="container  py2">
-		<ul class="h6 list-reset">
-		  <li class="inline-block mr1"><span class="btn bold">Link1 &gt;</span></li>
-		  <li class="inline-block mr1"><span class="btn bold">Link2 &gt;</span></li>
-		  <li class="inline-block mr1"><span class="btn bold">Link3 &gt;</span></li>
-		  <li class="inline-block mr1"><span class="btn bold">Link4 &gt;</span></li>
-		</ul>
-		<p class="right-align h6 mb0">&copy; 2016 Dr. Code</p>
+<div class="bg-black white py2">
+	<div class="container">
+		<p class="align-right h6 mb0">&copy; 2016 Dr. Code</p>
 	</div>
+</div>
 </footer>
 
 <script>
@@ -184,6 +168,23 @@ public class MaPremiereApplet extends java.applet.Applet {
         loop: true
       });
   });
+</script>
+<script>
+	function sticky_relocate() {
+	    var window_top = $(window).scrollTop();
+	    var div_top = $('#sticky_anchor').offset().top;
+	    if (window_top > div_top) {
+	        $('#sticky').addClass('fixed top0 z2');
+	    } else {
+	        $('#sticky').removeClass('fixed top0 z2');
+	    }
+	}
+
+	$(function () {
+	    $(window).scroll(sticky_relocate);
+	    sticky_relocate();
+	});
+
 </script>
 
 
