--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div class="cell sm-w6 p2 align-middle">
 			<h5 class="m0"><span class="green">Doctor</span> <span class="blue">Who ?</span></h5>
 			<h1 class="m0">A. Bailly</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quas soluta, quis amet quia accusantium cum deserunt, inventore pariatur cumque, officia consequatur quo nemo tempora doloremque! Excepturi magnam, tempore voluptatum!</p>
+			<p>Prout cogitationes rerumque ideae ordinantur et concatenantur in mente, ita corporis affectiones seu rerum imagines ad amussim ordinantur et concatenantur in corpore.</p>
 			<p class="h5"><span class="btn btn-outline">linkdin</span> <span class="btn btn-outline">tech blog</span></p>
 		</div>
 	</div>
