--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Dr. Code</title>
+    <title>Dr.Code</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/atome.css"> 
+    <link rel="stylesheet" href="css/default.css"> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/typed.js"></script>
   </head>
@@ -39,7 +40,7 @@
       <div class="bg-black white py2" >
 	<div class="container sm-w8">
 	  <div class="align-right h6 gray">
-	    <span class="btn btn-outline">Call Dr.</span> <span class="btn">+33 04 0055</span>
+	    <span class="btn btn-outline">Call the Doctor</span> <span class="btn"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span>
 	  </div>
 	  <div class="h1 py2" style="height:2.5em;">
 	    <span class="red">When</span> you need <br> 
@@ -48,8 +49,8 @@
 	    </span>
 	  </div>
 	  <div class="py2 align-right serif-sans">
-	    <h1 class="regular mb0"><strong style="font-size:130%;">::</strong> Dr. Code</h1>
-	    <h2 class="h5 regular m0">Fast-consulting code</h2>
+	    <h1 class="regular mb0"><strong style="letter-spacing: .05em; font-size:130%;">::</strong> Dr.Code</h1>
+	    <h2 class="h6 regular m0 caps">Consulting Coder</h2>
 	  </div>
 	</div>
       </div>
@@ -62,25 +63,25 @@
 
 	  <div class="h3 py2">
 	    <strong><span class="red">Verbaliser un problème </span> c'est déjà en partie <span class="green">le résoudre.</span> </strong><br>
-	    <b>Dr. Code </b>propose des <span class="blue">consultations courtes</span> pour tous ceux qui manipulent du code informatique confrontés à des difficultés.
+	    <b>Dr.Code </b>vous aide à établir un <span class="blue">diagnostic rapide</span> sur vos difficultés liées à au code.
 	  </div>
 
 	  <div class="muted h5"> 
-	    <p>Administrateurs, architectes, concepteurs, analystes métiers, managers, chefs de projets, scrumasters, coachs... </p>
+	    <p>architectes, administrateurs systèmes, concepteurs, analystes métiers, managers, chefs de projets, scrummasters, coachs, product owners... </p>
 	  </div>
 
 	  <div class="clearfix mxn2 border-top border-bottom">
 	    <div class="col px2 sm-w6">
-	      <h4>Drcode <span class="blue">c'est</span></h4>
+	      <h4>Dr.Code <span class="blue">c'est</span></h4>
 	      <ul class="list-reset h5">
 	 	<li class="inline"><span class="blue">&bull;</span> Un diagnostic permettant d'enclencher un processus d'amélioration</li>
-	 	<li class="inline"><span class="blue">&bull;</span> Une approche holistique de la résolution de problèmes liant produit et organisation</li>
+	 	<li class="inline"><span class="blue">&bull;</span> Une approche holistique de la résolution de problèmes liant code, produit et organisation</li>
 	 	<li class="inline"><span class="blue">&bull;</span> Un regard critique et bienveillant appuyé sur 20 ans d'expérience</li>
 	 	<li class="inline"><span class="blue">&bull;</span> Une maïeutique</li>
 	      </ul>
 	    </div>
 	    <div class="col px2 sm-w4 h5">
-	      <h4 class="">Drcode <span class="red">n'est pas</span></h4>
+	      <h4 class="">Dr.Code <span class="red">n'est pas</span></h4>
 	      <ul class="list-reset h5">
 	 	<li class="inline"><span class="red">x</span> Un service de consultant payé à la journée</li>
 	 	<li class="inline"><span class="red">x</span> Une boîte à outils de solutions toutes faites</li>
@@ -88,18 +89,16 @@
 	      </ul>
 	    </div>
 	  </div>
-
-	  <h4>Fonctionnement</h4>
-
         </div>	
     </section>
 
+    
     <section id="sticky_anchor">
       <div id="sticky" class="w10 bg-white py2 green border-top border-bottom border-green">
 	<div class="container align-center">
 	  <div class="h5">
-	    <span class="btn btn-outline">Call the doctor</span>
-	    <span class="h6"><span class="btn">+33 04 0055</span> <span class="btn">hello@drcode.io</span></span>
+	    <span class="btn btn-outline">Call the Doctor</span>
+	    <span class="h6"><span class="btn"><a href="mailto:hello@drcode.io">hello@drcode.io</a></span></span>
 	  </div>
 	</div> 
       </div>
@@ -109,26 +108,44 @@
       <div class="bg-white">
 	<div class="row m0">
 	  <div class="cell w6 sm-w4 mr1 align-bottom">
-	    <span><img src="img/arnaud_hero.png" alt="" class="align-bottom"></span>
+	    <span><img src="images/arnaud_hero.png" alt="" class="align-bottom"></span>
 	  </div>
 	  <div class="cell sm-w6 p2 align-middle">
-	    <h5 class="m0"><span class="green">Doctor</span> <span class="blue">Who ?</span></h5>
-	    <h1 class="m0">A. Bailly</h1>
-	    <p>Prout cogitationes rerumque ideae ordinantur et concatenantur in mente, ita corporis affectiones seu rerum imagines ad amussim ordinantur et concatenantur in corpore.</p>
-	    <p class="h5"><span class="btn btn-outline">linkdin</span> <span class="btn btn-outline">tech blog</span></p>
+	    <h3 class="m0"><span class="green">Docteur...</span> <span class="blue">Qui ?</span></h3>
+	    <h1 class="m0">Arnaud Bailly</h1>
+	    <p>Mon premier ordinateur était un <a href="http://oldcomputers.net/zx81.html">ZX81</a> mais je suis payé pour développer des logiciels depuis 1994.</p>
+	    <p>J'ai fait de la recherche, été consultant en ESL, formateur et enseignant, coach agile, architecte, développeur, CTO de startups...</p>
+            <p>Je code régulièrement en Java, C, Haskell, Clojure et comprend la plupart des langages en usage courant</p>
+	    <p class="h5"><span class="btn btn-outline"><a href="https://www.linkedin.com/in/arnaudbailly/">work</a></span> <span class="btn btn-outline"><a href="https://abailly.github.io">blog</a></span>  <span class="btn btn-outline"><a href="https://speakerdeck.com/abailly">talks</a></span>  <span class="btn btn-outline"><a href="https://github.com/abailly">code</a></span> <span class="btn btn-outline"><a href="https://twitter.com/dr_c0d3">tweets</a></span></p>
 	  </div>
 	</div>
       </div>
     </section>
 
-
+    <section>
+      <div class="bg-darken-1 py4">
+	<div class="row">
+          <div class="cell p2 sm-w7">
+	    <h3 class="m0"><span class="green">Docteur...</span> <span class="red">Comment ?</span></h3>
+            <ol>
+	      <li>Je prends <a href="https://calendly.com/dr-code">rendez-vous</a> pour une consultation à <a href="http://appear.in">distance</a></li>
+              <li>J'expose mon problème et explore des solutions lors de la consultation</li>
+	      <li>Je paye en fonction du <a href="#tarif">temps passé</a> sur <a href="https://paypal.me/arnaudbailly">PayPal</a></li>
+              <li>À l'issue de la séance, je reçois un compte-rendu écrit et une note d'honoraires</li>
+	    </ol>
+          </div>
+          <div class="cell p1 sm-w3">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section>
-      <div class="bg-darken-1 py1">
+      <div class="bg-darken-2 py1">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
-	      <h2 class="px2 align-right">Faq</h2>
+	      <h2 class="px2 align-right" id="tarif">Faq</h2>
 	    </div>
 	    <div class="cell p1 sm-w7 h5">
 	      <ul class="list-reset">
@@ -137,12 +154,24 @@
 	 	  <p>€100/h.</p>
 	 	</li>
 	 	<li class="border-top ">
+	 	  <h4 class="mb0">Can we do consultation in English?</h4>
+	 	  <p>Yes, we can!</p>
+	 	</li>
+	 	<li class="border-top ">
+	 	  <h4 class="mb0">Est-ce que la consultation peut se faire en face-à-face?</h4>
+	 	  <p>Oui, si c'est possible, raisonnable et utile de le faire</p>
+	 	</li>
+	 	<li class="border-top ">
+	 	  <h4 class="mb0">Je voudrais faire participer des collègues ou collaborateurs à la consultation, est-ce possible?</h4>
+	 	  <p>Non. Dr.Code aide à résoudre vos problèmes en établissant une relation personnelle de confiance et d'ouverture qui fonctionne moins bien en groupe</p>
+	 	</li>
+	 	<li class="border-top ">
 	 	  <h4 class="mb0">Est-ce remboursé par la sécurité sociale ?</h4>
 	 	  <p>Pas encore.</p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Une question ?</h4>
-	 	  <p><a href="#">hello@drcode.io</a> </p> 
+	 	  <h4 class="mb0">Une autre question ?</h4>
+	 	  <p><a href="mailto:hello@drcode.io">hello@drcode.io</a></p> 
 	 	</li>
 	      </ul>		
 	    </div>
@@ -151,25 +180,29 @@
     </section>
 
     <section>
-      <div class="bg-darken-2 py1">
+      <div class="bg-darken-3 py1">
 	<div class="container">
 	  <div class="row">
 	    <div class="cell p1 sm-w3">
-	      <h2 class="px2 align-right">Testimonials</h2>
+	      <h2 class="px2 align-right">Témoignages</h2>
 	    </div>
 	    <div class="cell p1 sm-w7 h5">
 	      <ul class="list-reset">
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Combien ça coûte?</h4>
-	 	  <p>€100/h.</p>
+	 	  <p>&laquo;Dr.Code c'est un pair programmeur qui nous a permis de faire des choix qu'on ne regrette pas.&raquo;</p>
+	 	  <p><i>Grégoire Hubert, <a href="http://pomm-project.org">http://pomm-project.org</a></i></p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Est-ce remboursé par la sécurité sociale ?</h4>
-	 	  <p>Pas encore.</p>
+	 	  <p>&laquo;In 16 days only, Arnaud got into our code, studied the open source ecosystem and was able to provide us the strengths and weaknesses of the different solutions. &raquo;</p>
+	 	  <p><i>Philippe Bourgau, Project Leader @Murex</i></p>
 	 	</li>
 	 	<li class="border-top ">
-	 	  <h4 class="mb0">Une question ?</h4>
-	 	  <p><a href="#">hello@drcode.io</a> </p> 
+                  <p>&laquo;En partageant son expérience et ses idées, Dr.Code m'a permis de faire des choix sur notre stratégie d'intégration continue et de déploiement&raquo;</p>
+                  <p><i>Jeff Abrahamson, Data Scientist, <a href="http://www.jellybooks.com">Jellybooks</a></i></p>
+                </li>
+                <li class="border-top ">
+	 	  <p>&laquo;Un quart d'heure d'échange a suffi pour m'offrir des solutions actionnables à un problème de tests de performances&raquo;</p>
+	 	  <p><i>Bernard Notarianni, Developer, <a href="http://barrel-db.org">Barrel</a></i></p>
 	 	</li>
 	      </ul>		
 	    </div>
@@ -181,7 +214,7 @@
     <footer>
       <div class="bg-black white py2">
 	<div class="container">
-	  <p class="align-right h6 mb0">&copy; 2016 Dr. Code</p>
+	  <p class="align-right h6 mb0">&copy; 2016-2017 Dr.Code</p>
 	</div>
       </div>
     </footer>
